--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/sylviaprabudy/team-profile-generator#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "inquirer": "^7.3.3",
     "jest": "^26.1.0"
   }
